logs/asyncpg-simpleorm.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/asyncpg'...
Listing './lib/python3.5/site-packages/asyncpg/_testbase'...
Listing './lib/python3.5/site-packages/asyncpg/exceptions'...
Listing './lib/python3.5/site-packages/asyncpg/protocol'...
Listing './lib/python3.5/site-packages/asyncpg/protocol/codecs'...
Listing './lib/python3.5/site-packages/asyncpg/protocol/record'...
Listing './lib/python3.5/site-packages/asyncpg-0.14.0.dist-info'...
Listing './lib/python3.5/site-packages/asyncpg_simpleorm'...
Compiling './lib/python3.5/site-packages/asyncpg_simpleorm/async_model.py'...
***   File "./lib/python3.5/site-packages/asyncpg_simpleorm/async_model.py", line 15
    return f"'{val}'"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/asyncpg_simpleorm/statements'...
Compiling './lib/python3.5/site-packages/asyncpg_simpleorm/statements/__init__.py'...
***   File "./lib/python3.5/site-packages/asyncpg_simpleorm/statements/__init__.py", line 37
    raise TypeError(f'Invalid callback: {callback}')
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/asyncpg_simpleorm/statements/base_statement.py'...
***   File "./lib/python3.5/site-packages/asyncpg_simpleorm/statements/base_statement.py", line 29
    return f"'{val}'"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/asyncpg_simpleorm-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/examples'...
Compiling './lib/python3.5/site-packages/examples/user.py'...
***   File "./lib/python3.5/site-packages/examples/user.py", line 49
    u = User(name=name, email=f'{name}@example.com')
                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/conftest.py'...
***   File "./lib/python3.5/site-packages/tests/conftest.py", line 17
    DBURI = f'postgresql://{dbuser}:{dbpass}@{dbhost}:{dbport}/{dbname}'
                                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/test_statements.py'...
***   File "./lib/python3.5/site-packages/tests/test_statements.py", line 73
    assert repr(stmt) == f"StatementValues('{string}', {args})"
                                                              ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
